logs/analysis/2018-11-25-13-03-45-mpf-kivypie.log
2018-11-25 13:03:45,985 : Machine : Mission Pinball Framework Core Engine v0.33.46
2018-11-25 13:03:45,987 : Machine : Command line arguments: {'create_config_cache': True, 'mc_file_name': None, 'mpfconfigfile': '/home/sysop/pinball/mpf/mpf/mpfconfig.yaml', 'pause': False, 'logfile': 'logs/2018-11-25-13-03-45-mpf-kivypie.log', 'no_load_cache': False, 'bcp': True, 'force_platform': None, 'syslog_address': None, 'loglevel': 11, 'force_assets_load': False, 'configfile': ['config'], 'consoleloglevel': 20}
2018-11-25 13:03:45,988 : Machine : MPF path: /home/sysop/pinball/mpf/mpf
2018-11-25 13:03:45,989 : Machine : Machine path: /home/sysop/pinball/machines/supersonic
2018-11-25 13:03:45,990 : Machine : Platform: linux
2018-11-25 13:03:45,991 : Machine : Python executable location: /usr/bin/python3
2018-11-25 13:03:45,993 : Machine : Python version: 3.4.2 (32-bit)
2018-11-25 13:03:50,792 : Machine : Loading cached config: /tmp/b483c2bb19bc8f7f9bf445a6d20fd2dcconfig
2018-11-25 13:03:50,828 : root : invalid syntax (rasppinball.py, line 332)
Traceback (most recent call last):
  File "/home/sysop/pinball/mpf/mpf/commands/game.py", line 181, in __init__
    MachineController(mpf_path, machine_path, vars(args)).run()
  File "/home/sysop/pinball/mpf/mpf/core/machine.py", line 117, in __init__
    self._load_hardware_platforms()
  File "/home/sysop/pinball/mpf/mpf/core/machine.py", line 534, in _load_hardware_platforms
    self.add_platform(platform)
  File "/home/sysop/pinball/mpf/mpf/core/machine.py", line 641, in add_platform
    hardware_platform = Util.string_to_class(self.config['mpf']['platforms'][name])
  File "/home/sysop/pinball/mpf/mpf/core/utility_functions.py", line 578, in string_to_class
    m = __import__(module)
  File "/home/sysop/pinball/mpf/mpf/platforms/rasppinball/rasppinball.py", line 332
    self.strip.setPixelColorRGB(0, 0xff, 0, 0)     # green
       ^
SyntaxError: invalid syntax
